--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@suiet/wallet-kit": "^0.2.15",
+    "eth-connect": "^6.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
