--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "post-publish": "PACKAGE_VERSION=$(cat package.json | grep \\\"version\\\" | head -1 | awk -F: '{ print $2 }' | sed 's/[\",]//g' | tr -d '[[:space:]]') && git tag v$PACKAGE_VERSION && git push --tags"
   },
   "dependencies": {
+    "@pixi/react": "^7.1.0",
     "@suiet/wallet-kit": "^0.2.15",
     "eth-connect": "^6.2.0",
+    "i": "^0.3.7",
+    "pixi.js": "^7.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
