--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "genworld",
   "private": true,
-  "version": "2.1.4",
+  "version": "2.1.5",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -12,6 +12,7 @@
     "post-publish": "PACKAGE_VERSION=$(cat package.json | grep \\\"version\\\" | head -1 | awk -F: '{ print $2 }' | sed 's/[\",]//g' | tr -d '[[:space:]]') && git tag v$PACKAGE_VERSION && git push --tags"
   },
   "dependencies": {
+    "firebase": "^10.3.1",
     "i": "^0.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
