--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "genworld",
   "private": true,
-  "version": "2.3.10",
+  "version": "2.3.11",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -16,6 +16,7 @@
     "i": "^0.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-spring": "^9.7.2",
     "txt-shuffle": "^1.0.3"
   },
